Hinzufügen der Elemente auf die HTML Seite

--- a/index.html
+++ b/index.html
@@ -8,8 +8,12 @@
 </head>
 <body>
     
-    <div>
+    <div id="NoticeBereich">
+        <input id="Notizen" type="text">
+    </div>
 
+    <div id="SpeicherButton">
+        <button id="addBtn">Speichern</button>
     </div>
 
 
